*Version 4.3.1*
* Fix bug in Multistate state event detector synchronization

*Version 4.3.0*
* Move Publisher points into separate table and add xid, name and enabled fields for better performance and control of publishers
* Importing a publisher with points from a previous version will only add new points, not update the existing points in the system this means only import once or delete the existing publisher prior to importing again
* Adding monitored values to the PointValueDaoSQL to track the number of point values saved (sync and async) per second.
* Adding a monitored metric for the PublishQueue size.
* Obscure original path/filename of image when inserting image into email
* Allow absolute paths for image paths in email templates
* Fix duplicate event count for Unacknowledged event summary
* Performance enhancement when calculating Unacknowledged event summary
* Change Script utility DataSourceQuery to require read permission to query for a data source, was previously edit permission
* Fix bug where nightly purge would fail to delete orphaned series ids if they didn't match the data point id
* Remove tracking latest alarm timestamp from EventManager
* Remove env property cache.users.size
* Cache all users in memory for performance, disable by setting cache.users.enabled=false (defaults to true)
* Set system permissions within a transaction to ensure any failures are rolled back and don't affect the runtime
* It is no longer possible to change the data type of a data point, e.g. from NUMERIC to BINARY
* Time-series database modules can be disabled via property (e.g. db.nosql.enabled=false)
* MapDB module is no longer available, please remove before attempting to upgrade
* Beta feature: Point value migration, allows for migration from one time-series database to another
* Re-factor PointValueDao (time-series) interface, methods have been substantially modified for ease of implementation